Fixed image spacing issue.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html, body {
+  padding: 0px;
+  margin: 0px;
+}
+
 p {
   font-family: 'Cormorant Infant', serif;
   font-size: 20px;
